TSK-1479: fixed classification tree not displaying all items
also change headline in classification details to have a max length to not bump the buttons to overflow when headline's length is too long

--- a/web/src/app/administration/components/classification-details/classification-details.component.scss
+++ b/web/src/app/administration/components/classification-details/classification-details.component.scss
@@ -22,6 +22,9 @@
   &__headline {
     font-size: 1.5rem;
     padding: 0.5rem;
+    max-width: calc(100% - 350px);
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__badge-message {
