--- a/web/src/app/administration/components/classification-overview/classification-overview.component.scss
+++ b/web/src/app/administration/components/classification-overview/classification-overview.component.scss
@@ -7,6 +7,7 @@
 }
 taskana-administration-classification-list {
   min-width: 500px;
+  height: 100%;
 }
 taskana-administration-classification-details {
   flex-grow: 1;
