--- a/web/src/theme/_tree.scss
+++ b/web/src/theme/_tree.scss
@@ -1,5 +1,5 @@
 tree-viewport {
-  height: calc(100vh - 165px);
+  height: calc(100vh - 225px);
   & > div {
     display: inline-block;
   }
